Update requirements and test-case config
Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/config/harmonic/test-case.config.yaml
+++ b/config/harmonic/test-case.config.yaml
@@ -2,10 +2,8 @@ generation: 1
 translation_map:
   jammy: 'Ubuntu Jammy'
   installType: 'Install type'
-  fastdds: 'FastDDS'
-  dds: 'DDS vendor'
 sets:
-  # Makes everything but install files and READMEs
+  # Makes everything but install files and sdf worlds
   - filters:
       - isMatch: true
         labels:
@@ -13,42 +11,118 @@ sets:
       - isMatch: false
         name: install
       - isMatch: false
-        name: README
+        name: src
+      - isMatch: false
+        labels:
+          - sdf worlds
     dimensions:
       os:
-        - Ubuntu Focal
         - Ubuntu Jammy
       buildType:
         - Binary
-  # Makes the READMEs only once
+        - Source
+  # Makes only the sdf worlds once
   - filters:
       - isMatch: true
         labels:
           - harmonic
-      - isMatch: false
-        name: install
       - isMatch: true
-        name: README
+        labels:
+          - sdf worlds
     dimensions:
       os:
-        - Ubuntu Focal
+        - Ubuntu Jammy
       buildType:
         - Binary
   #####################
-  # INSTALL FROM BINARIES
+  # INSTALL FROM SOURCE
   #####################
-  # Install on Ubuntu from binaries
+  # Install on Ubuntu from source
   - filters:
       - isMatch: true
         labels:
           - harmonic
       - isMatch: true
         name: ubuntu
-      - isMatch: false
+      - isMatch: true
         name: src
+      - isMatch: true
+        labels:
+          - docs
     dimensions:
       os:
-        - Ubuntu Focal
         - Ubuntu Jammy
+      buildType:
+        - Source
+  # Install on MacOS from source
+  - filters:
+      - isMatch: true
+        labels:
+          - harmonic
+      - isMatch: true
+        name: osx
+      - isMatch: true
+        name: src
+      - isMatch: true
+        labels:
+          - docs
+    dimensions:
+      os:
+        - MacOS
+      buildType:
+        - Source
+  # Install on Windows from source
+  - filters:
+      - isMatch: true
+        labels:
+          - harmonic
+      - isMatch: true
+        name: windows
+      - isMatch: true
+        name: src
+      - isMatch: true
+        labels:
+          - docs
+    dimensions:
+      os:
+        - Windows
+      buildType:
+        - Source
+  #####################
+  # INSTALL FROM BINARIES
+  #####################
+  # Install on Ubuntu from from binaries
+  - filters:
+      - isMatch: true
+        labels:
+          - harmonic
+      - isMatch: false
+        name: src
+      - isMatch: true
+        name: install_ubuntu
+      - isMatch: true
+        labels:
+          - docs
+    dimensions:
+      os:
+        - Ubuntu Jammy
+      buildType:
+        - Binary
+
+  # Install on macOS from from binaries
+  - filters:
+      - isMatch: true
+        labels:
+          - harmonic
+      - isMatch: false
+        name: src
+      - isMatch: true
+        name: install_osx
+      - isMatch: true
+        labels:
+          - docs
+    dimensions:
+      os:
+        - MacOS
       buildType:
         - Binary
